# oidc-loki

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  package-lock.json  package.json  robots.txt  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: attest.yml  ci.yml  codeql.yml  dependency-review.yml  gauntlet.yml  release.yml  scorecard.yml
docs/: ATTACKS.md  library-usage.md  plugin-development.md  testing-guide.md
docs/blog/: 2026-01-21-why-i-built-oidc-loki.md
docs/plans/: 2026-01-19-oidc-loki-architecture.md
examples/: README.md
examples/go/: go.mod  main.go
examples/java/: build.gradle
examples/python/: requirements.txt  test_oidc_security.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
reports/: INDEX.md  test-audit-coverage-gaps.md  test-audit-legitimacy.md  test-audit-verify-logic.md
reports/correspondence/: gemini-reply-review.md  oauth-wg-blog-heads-up.md  oauth-wg-disclosure-email.md  reply-to-ayesha-draft.md
reports/plans/: 001-splice-check-cli.md  002-oidc-loki-v02-bidirectional.md  003-medium-article-series.md  004-spec-contribution.md  005-gemini-deferred-suggestions.md
reports/publications/: medium-part1-draft.md  medium-part1-final.html
reports/research/: as-comparison.md  chain-splicing-writeup.md  claude-agentic-oidc-threats.md  claude-independent-validation.md  claude-review-of-gemini.md  consolidated-threat-catalog.md  gemini-adversarial-review.md  (+9 more)
src/: index.ts  server.ts
(+112 files in other folders)
